# BuGL

./: .gitignore  BULANG_SYNTAX_REFERENCE.md  CMakeLists.txt  CMakePresets.json  README.md  imgui.ini  mkdocs.yml  todo
.github/: FUNDING.yml
.github/workflows/: ci.yml
BuAssimp/: CMakeLists.txt
BuAssimp/src/: assimp_bindings.cpp  assimp_core.cpp  assimp_core.hpp  assimp_material.cpp  assimp_mesh.cpp  assimp_node.cpp  assimp_scene.cpp  plugin.cpp
BuBox2d/: CMakeLists.txt
BuBox2d/src/: box2d.cpp  plugin.cpp
BuChipmunk/: CMakeLists.txt
BuChipmunk/src/: bindings.hpp  chipmunk_bindings.cpp  chipmunk_body.cpp  chipmunk_common.hpp  chipmunk_constraint.cpp  chipmunk_shape.cpp  chipmunk_space.cpp  plugin.cpp
BuDebugHost/: CMakeLists.txt
BuDebugHost/src/: main.cpp
BuEditor/: CMakeLists.txt  settings.json
BuEditor/src/: GifRecorder.cpp  ImGuiFontAwesome.h  TextEditor.cpp  TextEditor.h  imgui_impl_sdl2.cpp  main.cpp
BuEnTT/: CMakeLists.txt
BuEnTT/src/: bindings.hpp  entt_bindings.cpp  entt_core.cpp  entt_core.hpp  entt_entity.cpp  entt_world.cpp  plugin.cpp
BuJolt/: CMakeLists.txt
BuJolt/src/: jolt_bindings.cpp  jolt_body.cpp  jolt_core.hpp  jolt_joints.cpp  jolt_world.cpp  plugin.cpp
BuMeshOpt/: CMakeLists.txt
BuMeshOpt/src/: plugin.cpp
BuMicroPather/: CMakeLists.txt
BuMicroPather/src/: plugin.cpp
BuOde/: CMakeLists.txt
BuOde/src/: bindings.hpp  ode_bindings.cpp  plugin.cpp
BuOpenSteer/: CMakeLists.txt
BuOpenSteer/src/: opensteer_agent.cpp  opensteer_bindings.cpp  opensteer_core.cpp  opensteer_core.hpp  plugin.cpp
BuRecast/: CMakeLists.txt
BuRecast/src/: plugin.cpp  recast_bindings.cpp  recast_core.cpp  recast_core.hpp  recast_crowd.cpp  recast_navmesh.cpp
BuWidgetsDemo/: CMakeLists.txt
BuWidgetsDemo/src/: main.cpp
assets/gifs/: README.md
bench/: CMakeLists.txt
bench/scripts/: bench_array_index.bu  bench_array_push.bu  bench_function_calls.bu  bench_gc_pressure.bu  bench_global_access.bu  bench_local_access.bu  bench_native_calls.bu  bench_property_access.bu  bench_vm_dispatch.bu
bench/src/: main.cpp
config/: settings.json
docs/: index.md  quickstart.md
docs/api/: audio.md  graphics.md  input.md  os.md  physics2d.md  physics3d.md  shapes.md  window.md
docs/language/: classes.md  control_flow.md  error_handling.md  functions.md  goto.md  loops.md  math.md  operators.md  processes.md  structs.md  switch.md  variables.md
docs/stdlib/: arrays.md  buffers.md  maps.md  strings.md
docs/tutorials/: 01_hello_world.md  02_game_loop.md  03_processes.md  04_classes.md  05_input.md  06_sprites.md
libbu/: CMakeLists.txt
libbu/include/: compiler.hpp  config.hpp  interpreter.hpp  pool.hpp
libbu/src/: builtins_base.cpp  builtins_file.cpp  compiler_expressions.cpp  compiler_statements.cpp  debug.cpp  gc.cpp  interpreter.cpp  interpreter_debug.cpp  interpreter_process.cpp  interpreter_runtime_goto.cpp  interpreter_runtime_switch.cpp  plugin.cpp  utils.cpp
main/: CMakeLists.txt
main/src/: audio_bindings.cpp  batch.cpp  batch.hpp  batch_bindings.cpp  binaryStream.cpp  bindings.cpp  bindings.hpp  bindings_context.cpp  bindings_internal.hpp  box2d.cpp  box2d_joints.cpp  box2d_joints.hpp  device.cpp  device.hpp  device_input_bindings.cpp  filebuffer.cpp  imopengl.cpp  input.cpp  input.hpp  main.cpp  msf_gif.cpp  ode_bindings.cpp  opengl.cpp  opengl_advanced.cpp  opengl_compute.cpp  opengl_instancing.cpp  opengl_legacy.cpp  opengl_loader_windows.cpp  opengl_query.cpp  opengl_rendertarget.cpp  opengl_shader.cpp  opengl_texture.cpp  opengl_transform_feedback.cpp  opengl_ubo.cpp  opengl_vertexbuffer.cpp  poly2tri_binding.cpp  raymath.cpp  shape_bindings.cpp  spriteFont.cpp  spriteFont.hpp  (+8 more)
scripts/: demo_assimp_animation.bu  demo_box2d_mouse_joint.bu  demo_box2d_stack.bu  demo_bsp_lagacy.bu  demo_entt_basic.bu  demo_entt_stress3d.bu  demo_entt_swarm.bu  demo_entt_transform3d.bu  demo_generic_ecs.bu  demo_imgui.bu  demo_jolt_tank_csm_particles.bu  demo_ode_fall3d.bu  demo_opensteer_boids.bu  demo_opensteer_path.bu  demo_opensteer_pedestrians.bu  demo_recast_navmesh.bu  demo_unity_style.bu  lib_b3d.bu  lib_camera_fps.bu  lib_camera_free.bu  lib_camera_orbit.bu  lib_iqm.bu  lib_md2.bu  lib_md3.bu  lib_q3bsp.bu  lib_trimesh.bu  main.bu  test_batch_new_funcs_smoke.bu  test_box2d_callbacks.bu  test_generic_syntax.bu  test_imgui_widgets_smoke.bu  vm_cheatsheet.bu
scripts/tests/: test_arrays_maps.bu  test_buffer_runtime_edges.bu  test_file_module.bu  test_strings.bu
scripts/tests/errors/: err_string_subtraction.bu
testAudio/: CMakeLists.txt
testAudio/src/: demo_audio_procedural.cpp  main.cpp
tests/: CMakeLists.txt
tests/plugins/: bindings_bridge.cpp  bindings_debug.cpp
tests/scripts/: test_cpp_script_bridge.bu  test_debug_global_defaults.bu  test_debug_runtime_introspection.bu  test_gc_native_handles.bu  test_generics_hybrid_bridge.bu  test_hybrid_persistent_gc_semantics.bu  test_include_loader.bu  test_language_basics.bu  test_script_generics.bu
tests/scripts/helpers/: test_helpers.bu
tests/src/: main.cpp
tools/: package_release.sh  package_release_win64.sh  release.sh
